@@ -7,7 +7,6 @@ import appeng.api.stacks.AEKey;
 import appeng.helpers.patternprovider.PatternProviderLogic;
 import appeng.helpers.patternprovider.PatternProviderLogicHost;
 import appeng.me.service.CraftingService;
-import appeng.menu.AEBaseMenu;
 import appeng.menu.locator.MenuLocators;
 import appeng.menu.me.crafting.CraftingCPUMenu;
 import appeng.parts.AEBasePart;
@@ -69,7 +68,7 @@ public class CraftingMonitorOpenProviderC2SPacket implements CustomPacketPayload
 
             // 通过菜单的 target（可能是 BlockEntity/Part/ItemHost），按 IActionHost 获取 Grid
             IGrid grid = null;
-            Object target = ((AEBaseMenu) menu).getTarget();
+            Object target = menu.getTarget();
             if (target instanceof IActionHost host && host.getActionableNode() != null) {
                 grid = host.getActionableNode().getGrid();
             }
@@ -128,8 +127,8 @@ public class CraftingMonitorOpenProviderC2SPacket implements CustomPacketPayload
 
                             // 最后发送高亮包，保证界面已打开
                             var outs = pattern.getOutputs();
-                            if (outs != null && !outs.isEmpty() && outs.get(0) != null) {
-                                AEKey key = outs.get(0).what();
+                            if (outs != null && !outs.isEmpty() && outs.getFirst() != null) {
+                                AEKey key = outs.getFirst().what();
                                 player.connection.send(new SetPatternHighlightS2CPacket(key, true));
                             }
 
